# build-number-incrementer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/: increment_build_number.py
tests/: test_increment_build_number.py
