[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-number-incrementer"
version = "1.0.0"
description = "A script to increment build numbers in Info.plist and build.gradle"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "cshade" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
increment-build-number = "increment_build_number:main"

[tool.setuptools]
py-modules = ["increment_build_number"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
